--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
 <h1>Git bandymas</h1>
 <p>labas</p>
+<h2>jhjff</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi aliquid molestiae sint explicabo beatae possimus quia quisquam iure optio, recusandae accusamus fuga molestias minus necessitatibus in repellat asperiores? Quidem, blanditiis!</p>
 
 </body>
